<resources>
    <string name="app_name">DA1 ANDROID NATIVE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_login_title">Ingresar con codigo</string>
    <string name="otp_login_subtitle">Ingresa el codigo de 6 digitos generado para tu acceso.</string>
    <string name="otp_recovery_title">Recuperar acceso</string>
    <string name="otp_recovery_subtitle">Verifica el codigo de 6 digitos para recuperar el acceso a tu cuenta.</string>
    <string name="otp_helper_text">En este entorno de desarrollo el codigo se muestra en la terminal del backend.</string>
    <string name="otp_email_label">Codigo enviado a %1$s</string>
    <string name="otp_code_hint">Codigo OTP</string>
    <string name="otp_verify_button">Verificar codigo</string>
    <string name="otp_resend_button">Reenviar codigo</string>
    <string name="request_login_otp_button">Ingresar con OTP</string>
    <string name="request_recovery_otp_button">Recuperar acceso con OTP</string>

    <string name="app_brand_title">XploreNow Argentina</string>
    <string name="nav_reservas">Reservas</string>
    <string name="nav_resenas">Reseñas</string>
    <string name="nav_perfil">Perfil</string>

    <string name="reservas_title">Mis reservas</string>
    <string name="reservas_subtitle">Listado de las reservas realizadas por el usuario.</string>

    <string name="reservation_item_activity_label">Actividad</string>
    <string name="reservation_item_destination_label">Destino</string>
    <string name="reservation_item_date_label">Fecha</string>
    <string name="reservation_item_time_label">Hora</string>
    <string name="reservation_item_participants_label">Participantes</string>
    <string name="reservation_item_voucher_label">Voucher</string>
    <string name="reservation_item_id_label">Reserva #%1$d</string>
    <string name="reservation_item_status_pending">PENDING</string>
    <string name="reservation_item_status_confirmed">CONFIRMED</string>
    <string name="reservation_item_status_cancelled">CANCELLED</string>
    <string name="reservation_item_status_completed">COMPLETED</string>

    <string name="reservation_detail_title">Detalle de reserva</string>
    <string name="reservation_detail_subtitle">Revisa la información completa de tu reserva.</string>
    <string name="reservation_detail_section_data">Datos de la reserva</string>
    <string name="reservation_detail_cancellation_policy">Política de cancelación</string>
    <string name="reservation_cancel_button">Cancelar reserva</string>
    <string name="reservation_confirm_button">Confirmar reserva</string>

    <string name="activity_detail_title">Detalle de actividad</string>
    <string name="activity_image_content_description">Imagen de la actividad</string>
    <string name="destination_icon_content_description">Ubicación</string>
    <string name="duration_icon_content_description">Duración</string>
    <string name="description_label">Descripción</string>
    <string name="meeting_point_label">Punto de encuentro</string>
    <string name="guide_label">Guía</string>
    <string name="language_label">Idioma</string>
    <string name="inclusions_label">Incluye</string>
    <string name="cancellation_policy_label">Política de cancelación</string>
    <string name="available_schedules_label">Horarios disponibles</string>
    <string name="select_schedule_button">Seleccioná un horario</string>

    <string name="create_reservation_title">Confirmar reserva</string>
    <string name="selected_schedule_label">Horario seleccionado</string>
    <string name="participants_count_label">Cantidad de participantes</string>
    <string name="remove_participant_content_description">Quitar participante</string>
    <string name="add_participant_content_description">Agregar participante</string>
    <string name="summary_label">Resumen</string>
    <string name="summary_participants_label">Participantes</string>
    <string name="summary_estimated_price_label">Precio estimado</string>
    <string name="confirm_reservation_button">Confirmar reserva</string>

    <string name="actividad_mock_1_title">Actividad #1</string>
    <string name="actividad_mock_2_title">Actividad #2</string>
    <string name="actividad_mock_3_title">Actividad #3</string>
    <string name="actividad_mock_fecha">Fecha</string>
    <string name="actividad_mock_horario">Horario</string>
    <string name="actividad_mock_fecha_format">Fecha: %1$s</string>
    <string name="actividad_mock_horario_format">Horario: %1$s</string>
    <string name="estado_confirmada">Confirmada</string>
    <string name="estado_cancelada">Cancelada</string>
    <string name="estado_finalizada">Finalizada</string>
    <string name="estado_label">Estado</string>
    <string name="estado_label_format">Estado: %1$s</string>
</resources>
